--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">maven</string>
+    <string name="todo_list_activity_label">maven to do list</string>
 </resources>
